# PythonProject17

./: README.md  pyproject.toml
htmlcov/: index.html
src/: file_worker.py  hh.py  main.py  parser.py  save_to_json_file.py  utils.py  work_with_vacancies.py
tests/: conftest.py  test_hh.py  test_main.py  test_save_to_json_file.py  test_utils.py  test_work_with_vacancies.py
